[package]
name = "bdk-playground"
version = "0.1.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wee_alloc = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
console_log = "0.2"
secp256k1 = { version = "0.17", features = ["rand"] }
bdk-cli = { path = "../../bdk-cli", default-features = false, features = ["esplora", "compiler", "wasm"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# [patch.crates-io]
# miniscript = { path = "../../rust-miniscript" }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
